@@ -124,6 +124,8 @@
 #include "sourcevr/isourcevirtualreality.h"
 #include "client_virtualreality.h"
 #include "mumble.h"
+#include "discord_rpc.h"
+#include <time.h>
 
 // NVNT includes
 #include "hud_macros.h"
@@ -331,6 +333,10 @@ void DispatchHudText( const char *pszName );
 static ConVar s_CV_ShowParticleCounts("showparticlecounts", "0", 0, "Display number of particles drawn per frame");
 static ConVar s_cl_team("cl_team", "default", FCVAR_USERINFO|FCVAR_ARCHIVE, "Default team when joining a game");
 static ConVar s_cl_class("cl_class", "default", FCVAR_USERINFO|FCVAR_ARCHIVE, "Default class when joining a game");
+// Discord RPC
+static ConVar cl_discord_appid("cl_discord_appid", "815383723243601970", FCVAR_DEVELOPMENTONLY | FCVAR_CHEAT);
+static ConVar cl_discord("cl_discord", "1", FCVAR_ARCHIVE);
+static int64_t startTimestamp = time(0);
 
 #ifdef HL1MP_CLIENT_DLL
 static ConVar s_cl_load_hl1_content("cl_load_hl1_content", "0", FCVAR_ARCHIVE, "Mount the content from Half-Life: Source if possible");
@@ -837,6 +843,42 @@ bool IsEngineThreaded()
 }
 
 //-----------------------------------------------------------------------------
+// Discord RPC
+//-----------------------------------------------------------------------------
+static void HandleDiscordReady(const DiscordUser* connectedUser)
+{
+	DevMsg("Discord: Connected to user %s#%s - %s\n",
+		connectedUser->username,
+		connectedUser->discriminator,
+		connectedUser->userId);
+}
+
+static void HandleDiscordDisconnected(int errcode, const char* message)
+{
+	DevMsg("Discord: Disconnected (%d: %s)\n", errcode, message);
+}
+
+static void HandleDiscordError(int errcode, const char* message)
+{
+	DevMsg("Discord: Error (%d: %s)\n", errcode, message);
+}
+
+static void HandleDiscordJoin(const char* secret)
+{
+	// Not implemented
+}
+
+static void HandleDiscordSpectate(const char* secret)
+{
+	// Not implemented
+}
+
+static void HandleDiscordJoinRequest(const DiscordUser* request)
+{
+	// Not implemented
+}
+
+//-----------------------------------------------------------------------------
 // Constructor
 //-----------------------------------------------------------------------------
 
@@ -1089,6 +1131,36 @@ int CHLClient::Init( CreateInterfaceFn appSystemFactory, CreateInterfaceFn physi
 	HookHapticMessages(); // Always hook the messages
 #endif
 
+	// Discord RPC
+	if (cl_discord.GetBool())
+	{
+		DiscordEventHandlers handlers;
+		memset(&handlers, 0, sizeof(handlers));
+
+		handlers.ready = HandleDiscordReady;
+		handlers.disconnected = HandleDiscordDisconnected;
+		handlers.errored = HandleDiscordError;
+		handlers.joinGame = HandleDiscordJoin;
+		handlers.spectateGame = HandleDiscordSpectate;
+		handlers.joinRequest = HandleDiscordJoinRequest;
+
+		char appid[255];
+		sprintf(appid, "%d", engine->GetAppID());
+		Discord_Initialize(cl_discord_appid.GetString(), &handlers, 1, appid);
+
+		if (!g_bTextMode)
+		{
+			DiscordRichPresence discordPresence;
+			memset(&discordPresence, 0, sizeof(discordPresence));
+
+			discordPresence.state = "In-Game";
+			discordPresence.details = "Main Menu";
+			discordPresence.startTimestamp = startTimestamp;
+			discordPresence.largeImageKey = "large_icon";
+			Discord_UpdatePresence(&discordPresence);
+		}
+	}
+
 	return true;
 }
 
@@ -1213,6 +1285,9 @@ void CHLClient::Shutdown( void )
 	DisconnectDataModel();
 	ShutdownFbx();
 #endif
+
+	// Discord RPC
+	Discord_Shutdown();
 	
 	// This call disconnects the VGui libraries which we rely on later in the shutdown path, so don't do it
 //	DisconnectTier3Libraries( );
@@ -1569,7 +1644,7 @@ void CHLClient::View_Fade( ScreenFade_t *pSF )
 //-----------------------------------------------------------------------------
 // Purpose: Per level init
 //-----------------------------------------------------------------------------
-void CHLClient::LevelInitPreEntity( char const* pMapName )
+void CHLClient::LevelInitPreEntity(char const* pMapName)
 {
 	// HACK: Bogus, but the logic is too complicated in the engine
 	if (g_bLevelInitialized)
@@ -1579,15 +1654,15 @@ void CHLClient::LevelInitPreEntity( char const* pMapName )
 	input->LevelInit();
 
 	vieweffects->LevelInit();
-	
+
 	//Tony; loadup per-map manifests.
-	ParseParticleEffectsMap( pMapName, true );
-	
+	ParseParticleEffectsMap(pMapName, true);
+
 	// Tell mode manager that map is changing
-	modemanager->LevelInit( pMapName );
+	modemanager->LevelInit(pMapName);
 	ParticleMgr()->LevelInit();
 
-	hudlcd->SetGlobalStat( "(mapname)", pMapName );
+	hudlcd->SetGlobalStat("(mapname)", pMapName);
 
 	C_BaseTempEntity::ClearDynamicTempEnts();
 	clienteffects->Flush();
@@ -1598,8 +1673,8 @@ void CHLClient::LevelInitPreEntity( char const* pMapName )
 	IGameSystem::LevelInitPreEntityAllSystems(pMapName);
 
 #ifdef USES_ECON_ITEMS
-	GameItemSchema_t *pItemSchema = ItemSystem()->GetItemSchema();
-	if ( pItemSchema )
+	GameItemSchema_t* pItemSchema = ItemSystem()->GetItemSchema();
+	if (pItemSchema)
 	{
 		pItemSchema->BInitFromDelayedBuffer();
 	}
@@ -1610,24 +1685,41 @@ void CHLClient::LevelInitPreEntity( char const* pMapName )
 #if !defined( NO_ENTITY_PREDICTION )
 	// don't do prediction if single player!
 	// don't set direct because of FCVAR_USERINFO
-	if ( gpGlobals->maxClients > 1 )
+	if (gpGlobals->maxClients > 1)
 	{
-		if ( !cl_predict->GetInt() )
+		if (!cl_predict->GetInt())
 		{
-			engine->ClientCmd( "cl_predict 1" );
+			engine->ClientCmd("cl_predict 1");
 		}
 	}
 	else
 	{
-		if ( cl_predict->GetInt() )
+		if (cl_predict->GetInt())
 		{
-			engine->ClientCmd( "cl_predict 0" );
+			engine->ClientCmd("cl_predict 0");
 		}
 	}
 #endif
 
 	// Check low violence settings for this map
-	g_RagdollLVManager.SetLowViolence( pMapName );
+	g_RagdollLVManager.SetLowViolence(pMapName);
+
+	// Discord RPC
+	if (cl_discord.GetBool())
+	{
+		if (!g_bTextMode)
+		{
+			DiscordRichPresence discordPresence;
+			memset(&discordPresence, 0, sizeof(discordPresence));
+
+			char buffer[256];
+			discordPresence.state = "In-Game";
+			sprintf(buffer, "Map: %s", pMapName);
+			discordPresence.details = buffer;
+			discordPresence.largeImageKey = "large_icon";
+			Discord_UpdatePresence(&discordPresence);
+		}
+	}
 
 	gHUD.LevelInit();
 
@@ -1716,6 +1808,22 @@ void CHLClient::LevelShutdown( void )
 	StopAllRumbleEffects();
 
 	gHUD.LevelShutdown();
+
+	// Discord RPC
+	if (cl_discord.GetBool())
+	{
+		if (!g_bTextMode)
+		{
+			DiscordRichPresence discordPresence;
+			memset(&discordPresence, 0, sizeof(discordPresence));
+
+			discordPresence.state = "In-Game";
+			discordPresence.details = "Main Menu";
+			discordPresence.startTimestamp = startTimestamp;
+			discordPresence.largeImageKey = "large_icon";
+			Discord_UpdatePresence(&discordPresence);
+		}
+	}
 
 	internalCenterPrint->Clear();
 
