@@ -138,6 +138,7 @@ $Project
 		$Implib	"$LIBPUBLIC\tier0"
 		$Lib	"$LIBPUBLIC\tier1"
 		$Implib	"$LIBPUBLIC\vstdlib"
+		$Lib 	"$LIBPUBLIC\discord-rpc"
 	}
 }
 
